<resources>
    <string name="app_name">Tournament</string>
    <string name="mutual">Обоюдное</string>
    <string name="minus2">-2</string>
    <string name="minus1">-1</string>
    <string name="plus2">+2</string>
    <string name="plus1">+1</string>
    <string name="zero">0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="blue">Синий</string>
    <string name="red">Красный</string>
    <string name="club">Клуб</string>
</resources>